--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adaptivnaya verstka</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <section class="main">
@@ -12,7 +12,7 @@
             <div class="container">
                 <nav class="header__nav">
                     <div class="header__burger">
-                        <img src="./assets/img/burger.svg" alt="burger">
+                        <img src="burger.svg" alt="burger">
                     </div>
                     <ul class="header__menu">
                         <li class="header__item">
@@ -58,7 +58,7 @@
                             </div>
                         </div>
                         <div class="main__photo-mobile">
-                            <img src="./assets/img/Foto.png" alt="foto1">
+                            <img src="Foto.png" alt="foto1">
                         </div>
                         <h3 class="main__subtitle">Курс будет полезен вам, если вы хотите:</h3>
                         <ol class="main__list">
@@ -77,7 +77,7 @@
                         </ol>
                     </div>
                     <div class="main__photo">
-                        <img src="./assets/img/Foto.png" alt="foto1">
+                        <img src="Foto.png" alt="foto1">
                     </div>
                 </div>
             </div>
