--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adaptivnaya verstka</title>
-    <link rel="stylesheet" href="style.scss">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <section class="main">
@@ -12,7 +12,7 @@
             <div class="container">
                 <nav class="header__nav">
                     <div class="header__burger">
-                        <img src="burger.svg" alt="burger">
+                        <img src="./assets/img/burger.svg" alt="burger">
                     </div>
                     <ul class="header__menu">
                         <li class="header__item">
@@ -50,7 +50,7 @@
                             </div>
                             <div class="main__info-box">
                                 <p class="main__dig">14</p>
-                                <p class="main__text">Лекций</p>
+                                <p class="main__text">Лекций в каждом</p>
                             </div>
                             <div class="main__info-box">
                                 <p class="main__dig">3,5</p>
@@ -58,7 +58,7 @@
                             </div>
                         </div>
                         <div class="main__photo-mobile">
-                            <img src="Foto.png" alt="foto1">
+                            <img src="./assets/img/Foto.png" alt="foto1">
                         </div>
                         <h3 class="main__subtitle">Курс будет полезен вам, если вы хотите:</h3>
                         <ol class="main__list">
@@ -77,8 +77,25 @@
                         </ol>
                     </div>
                     <div class="main__photo">
-                        <img src="Foto.png" alt="foto1">
+                        <img src="./assets/img/Foto.png" alt="foto1">
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="program">
+        <div class="container">
+            <div class="program__title">
+                Программа обучения
+            </div>
+            <div class="program__items">
+                <div class="program__item">
+                    <p>Первый блок:</p>
+                    <p>+</p>
+                </div>
+                <div class="program__item">
+                    <p>Второй блок:</p>
+                    <p>+</p>
                 </div>
             </div>
         </div>
