--- a/index.html
+++ b/index.html
@@ -100,5 +100,42 @@
             </div>
         </div>
     </section>
+    <section class="tariffs">
+        <div class="tariffs__wrap">
+            <div class="container">
+                <div class="tariffs__title">Тарифы:</div>
+                <div class="tariffs__card-block">
+                    <div class="tariffs__card">
+                        <div class="tariffs__card-title">Стандарт</div>
+                            <ul>
+                                <li>14 уроков в записи</li>
+                                <li>Презентации к лекциям, методички</li>
+                                <li>3,5 месяца доступа во время обучения и 1 месяц после</li>
+                                <li class="tariffs__li_through">Домашние задания</li>
+                                <li class="tariffs__li_through">Чат единомышленников</li>
+                                <li class="tariffs__li_through">Обратная связь, ответы на вопросы в чате</li>
+                                <li class="tariffs__li_through">Сертификат, подтверждающий квалификацию</li>
+                            </ul>
+                            <p>Стоимость 1 блока: 19990 рублей *</p>
+                        <div class="tariffs__btn">Записаться</div>
+                    </div>
+                    <div class="tariffs__card">
+                        <div class="tariffs__card-title">Максимум</div>
+                            <ul>
+                                <li>14 онлайн-лекций + их запись</li>
+                                <li>Презентации к лекциям, методички</li>
+                                <li>3,5 месяца доступа во время обучения и 2 месяца после</li>
+                                <li>Домашние задания</li>
+                                <li>Чат единомышленников</li>
+                                <li>Обратная связь, ответы на вопросы в чате</li>
+                                <li>Сертификат, подтверждающий квалификацию</li>
+                            </ul>
+                            <p>Стоимость 1 блока: 24990*</p>
+                        <div class="tariffs__btn">Записаться</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
